header fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -221,7 +221,7 @@ a:hover {
   .app {
     height: auto;
     overflow-y: visible;
-    padding: 2rem 1rem;
+    padding: 5rem 1rem 2rem;
     max-width: 100%;
   }
 
